ACTIN-1644: fix bug with empty set of hotspots
and testcase